--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -278,3 +278,32 @@
   Url = {http://doi.acm.org/10.1145/258915.258924},
   Year = {1997}
 }
+
+@article{Muthukrishnan05,
+  Acmid = {1166410},
+  Address = {Hanover, MA, USA},
+  Author = {Muthukrishnan, S.},
+  Doi = {10.1561/0400000002},
+  Issn = {1551-305X},
+  Issue_Date = {August 2005},
+  Journal = {Foundations and Trends in Theoretical Computer Science},
+  Month = aug,
+  Number = {2},
+  Numpages = {120},
+  Pages = {117--236},
+  Publisher = {Now Publishers Inc.},
+  Title = {{Data Streams: Algorithms and Applications}},
+  Url = {http://dx.doi.org/10.1561/0400000002},
+  Volume = {1},
+  Year = {2005}
+}
+
+@incollection{Demetrescu07,
+  Author = {Demetrescu, Camil and Finocchi, Irene},
+  Booktitle = {Handbook of Applied Algorithms: Solving Scientific, Engineering, and Practical Problems},
+  Editors = {A. Nayak and I. Stojmenovic (eds)},
+  Publisher = {John Wiley and Sons},
+  Title = {Algorithms for data streams},
+  Volume = {241},
+  Year = {2007}
+}
