--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -303,7 +303,50 @@
   Booktitle = {Handbook of Applied Algorithms: Solving Scientific, Engineering, and Practical Problems},
   Editors = {A. Nayak and I. Stojmenovic (eds)},
   Publisher = {John Wiley and Sons},
-  Title = {Algorithms for data streams},
+  Title = {{Algorithms for Data Streams}},
   Volume = {241},
   Year = {2007}
+}
+
+@article{Cormode08,
+  Acmid = {1454225},
+  Author = {Cormode, Graham and Hadjieleftheriou, Marios},
+  Doi = {10.14778/1454159.1454225},
+  Issn = {2150-8097},
+  Issue_Date = {August 2008},
+  Journal = {Proc. VLDB Endow.},
+  Month = aug,
+  Number = {2},
+  Numpages = {12},
+  Pages = {1530--1541},
+  Publisher = {VLDB Endowment},
+  Title = {Finding Frequent Items in Data Streams},
+  Url = {http://dx.doi.org/10.14778/1454159.1454225},
+  Volume = {1},
+  Year = {2008}
+}
+
+@techreport{Arnold00,
+  Author = {Arnold, Matthew and Sweeney, Peter F.},
+  Institution = {IBM Research},
+  Number = {RC 21789},
+  Title = {{Approximating the Calling Context Tree Via Sampling}},
+  Year = {2000}
+}
+
+@inproceedings{Whaley00,
+	Acmid = {337483},
+	Address = {New York, NY, USA},
+	Author = {Whaley, John},
+	Booktitle = {Proceedings of the ACM 2000 Conference on Java Grande},
+	Doi = {10.1145/337449.337483},
+	Isbn = {1-58113-288-3},
+	Location = {San Francisco, California, USA},
+	Numpages = {10},
+	Pages = {78--87},
+	Publisher = {ACM},
+	Series = {JAVA '00},
+	Title = {{A Portable Sampling-based Profiler for Java Virtual Machines}},
+	Url = {http://doi.acm.org/10.1145/337449.337483},
+	Year = {2000}
 }
