--- a/header.tex
+++ b/header.tex
@@ -1,6 +1,10 @@
 \usepackage{color}
 \usepackage{listings}
 \usepackage{enumitem}
+%\usepackage{algorithm}
+\usepackage{algorithm2e}
+\usepackage{wrapfig}
+%\usepackage{algorithm2e}
 %\usepackage{tabularx}
 
 % uncomment to enable clever references
@@ -28,6 +32,7 @@
 \newcommand{\mylemma}{}
 \newcommand{\mytheorem}{}
 \newcommand{\myequation}{}
+\newcommand{\myalgorithm}{}
 \else
 \newcommand{\mychapter}{Chapter~}
 \newcommand{\mysection}{Section~}
@@ -37,6 +42,7 @@
 \newcommand{\mylemma}{Lemma~}
 \newcommand{\mytheorem}{Theorem~}
 \newcommand{\myequation}{Equation~}
+\newcommand{\myalgorithm}{Algorithm~}
 \fi
 
 % theorems
